--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "tsx index.ts"
+    "start": "npx tsx index.ts",
+    "start:dev": "npx tsx watch index.ts"
   },
   "type": "module",
   "keywords": [],
