--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "e2e-screenshot-diff",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.ts",
+  "bin": "",
   "scripts": {
-    "start": "npx tsx index.ts",
-    "start:dev": "npx tsx watch index.ts"
+    "start": "npx tsx src/index.ts",
+    "start:dev": "npx tsx watch src/index.ts",
+    "build": "pkgroll"
   },
+  "exports": "./dist/index.mjs",
   "type": "module",
   "keywords": [],
   "author": "",
@@ -19,6 +22,7 @@
     "tsx": "^4.19.1"
   },
   "devDependencies": {
+    "pkgroll": "^2.5.0",
     "prettier": "^3.3.3",
     "typescript": "^5.6.3"
   }
