--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "e2e-screenshot-diff",
+  "name": "@klaster1/visual-regression-review",
   "version": "1.0.0",
   "main": "src/index.ts",
   "bin": {
-    "esd": "src/index.ts"
+    "vrr": "src/index.ts"
   },
   "scripts": {
     "start": "src/index.ts"
@@ -12,7 +12,7 @@
   "type": "module",
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "description": "",
   "dependencies": {
     "@types/express": "^5.0.1",
@@ -24,5 +24,8 @@
   "devDependencies": {
     "prettier": "^3.5.3",
     "typescript": "^5.8.2"
+  },
+  "engines": {
+    "node": ">=23.6.0"
   }
 }
